--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Tha Best Chess Website</title>
-        <link href="Chess.css" rel="stylesheet" />
+        <link href="./chess.css" rel="stylesheet" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -139,6 +139,6 @@
     
             </div>
         </div>
-    <script src="Chess.js"></script>
+    <script src="./Chess.js"></script>
     </body>
 </html>
