--- a/index.html
+++ b/index.html
@@ -139,6 +139,6 @@
     
             </div>
         </div>
-    <script src="./Chess.js"></script>
+    <script src="./chess.js"></script>
     </body>
 </html>
